[project]
name = "guardrails-intro"
version = "0.1.0"
description = "Introduction to the use of guardrails for Generative AI applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.3",
    "tavily-python>=0.7.10",
]
